--- a/CSS/All Books.css
+++ b/CSS/All Books.css
@@ -1,11 +1,9 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
-#container{
+body{
     background-color: darkcyan;
-    width: 100%;
-    height: 100vh;
 }
 h1{
     text-align: center;
@@ -24,8 +22,8 @@ table{
 }
 th{
     padding: 3px;
-    color: white;
-    text-shadow:brown 0.5px 0.5px;
+    color: silver;
+    text-shadow:black 0.5px 0.5px;
 }
 td{
     padding: 3px;
@@ -38,11 +36,61 @@ td{
     width: max-content;
     margin:2% 46%;
     border-radius: 5px;
-    border: 0.1px solid black;
+    color: white;
     box-shadow: 4px 4px rgb(0, 0, 0 ,0.2);
 
 }
-a{
-    text-decoration: none;
+.delete,.request,.editing{
     color: white;
+    padding: 5px;
+    margin: auto;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+.delete{
+    margin-left:7px;
+    background-color: red;
+}
+.request,.editing{
+    margin: auto;
+    background-color: rgb(22, 196, 22);
+}
+/* Popup for edit data */
+#editing{
+    display: none;
+    background-color: cadetblue;
+    width: max-content;
+    height: max-content;
+    border: 2px solid rgb(53, 42, 42);
+    padding: 2%;
+    position: fixed;
+    top: 65px;
+    left: 36%;
+    border-radius: 25px;
+    box-shadow: 4px 4px rgb(27, 27, 27, 0.3);
+}
+#editing>h1{
+    color: rgb(221, 223, 224);
+}
+input{
+    background-color: rgb(96, 171, 173);
+    height: max-content;
+    padding: 5px;
+    margin: auto;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+[type="submit"]{
+    margin-left: 30%;
+    color: white;
+    padding: 8px 18px;
+    background-color: black;
+}
+.searchedTerm{
+    /* background-color: rgb(91, 194, 194); */
+    text-decoration: underline;
+    color: white;
+    font-weight: 800;
+    text-shadow: 0.2px 0.2px black;
+    font-style:oblique;
 }
