--- a/CSS/Admin Site.css
+++ b/CSS/Admin Site.css
@@ -1,9 +1,28 @@
 *{
     margin: 0px;
     padding: 0px;
+    
+}
+*{
+    scrollbar-color: black blue;
+}
+*::-webkit-scrollbar{
+    width: 10px;
+}
+*::-webkit-scrollbar-track{
+    background-color: silver;
+}
+*::-webkit-scrollbar-thumb{
+    background-color: grey;
+}
+.header{
+    border-top: 1px solid rgba(0, 0, 0, 0.322);
+    box-shadow: 1px 1px 3px rgba(27, 26, 26, 0.521);
+    background-color: whitesmoke;
 }
 .header,#headerChild{
     display: flex;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #headerChild{
     width: 60%;
@@ -12,14 +31,13 @@
 #navbarIcon,#headerChild,#welcome{
     position:relative;
     left: 1%;
-    top: 1%;
-    bottom: 2%;
-    margin: 1% 4px;
+    top: 1%;;
+    margin: 0.5% 4px;
 }
 #welcome{ 
-    margin: 2% 3px ;
-    color:whitesmoke;
-    text-shadow:1px 1px rgb(26, 25, 25,0.4) ;
+    font-weight: 1000;
+    margin-top: 3%;
+    color:darkblue;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 #Search>form{
@@ -29,14 +47,34 @@
     padding: 2px;
     top: 2%;
 }
-[type="search"]{
-    margin-right: 2%;
+[type="submit"]{
+    padding: 2px 4px;
+    border-radius: 4px;
+    border: 1px solid blue;
 }
-
+[type="search"],[type="search"]:active{
+    border: 1px solid blue;
+    color: blue;
+    margin-right: 2%;
+    padding: 5px;
+    border-radius: 5px;
+}
+[type="search"]::placeholder{
+    color:blue;
+}
+i{  
+    color: blue;
+    font-size: larger;
+}
+[type="submit"]>i{
+    color: blue;
+    font-size:large;
+    background-color: white;
+}
 #libraryName{
-    color:gold;
-    margin-top: 5px;
-    text-shadow: white 1px 1px;
+    color:blue;
+    margin-top: 7px;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.562);
     text-align: center;
 }
 
@@ -50,81 +88,22 @@
     height: 20vw;
     width: 20vw;
     margin:3vw 15vw;
-    background-color: rgb(32, 158, 158);
-    border: 2px solid silver;
+    background-color:whitesmoke;
     border-radius: 15%;
-}
-i{  
-    color: whitesmoke;
-    height: 7vw;
-    width: 7vw;
-}
-input{
-    border-radius: 5px;
-    border: 2px solid black;
-    height: 3%;
-    padding: 3px;
-    
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.582);
 }
 a{
     text-decoration: none;
-    color: white;
-}
-[type="submit"],input{
-    color: white;
-    border: 0.5px solid white;
-    background-color: rgba(25, 130, 179, 0.315);
-    padding: 5px;
-    border-radius: 3px;
-}
-[name="search"]::placeholder{
-    color: white;
-}
-.header{
-    background-color: rgb(37, 165, 165);
+    color: blue;
 }
 #body{
     position: relative;
     z-index: 1;
-    background-color: darkcyan;
 }
-#SideBar a{
-    text-decoration: none;
-    color:white;
-}
-#SideBar a:hover{
-    color: blue;
-    padding: 4px;
-    cursor:pointer;
-    border-radius: 5px;
-    background-color: white;
-}
-#SideBar a:focus{
-   color:crimson;
-   background-color: antiquewhite;
-}
-#responseData{
-    height: 120px;
-    position: relative;
-    margin-bottom: 2%;
-    z-index: 4;
-    background-color: rgb(22, 100, 100);
-    color: white;
-    overflow-y: scroll;
-}
-.OK{
-    background-color: black;
-    color: white;
-    border-radius: 7px;
-    padding:3px 8px;
-    margin:2px 40%;
-}
-.responsingBox{
-    padding-top:4%;
-}
+
 #SideBar{
-    background-color: rgb(22, 100, 100);
-    color: white;
+    background-color:rgb(241, 237, 237);
+    box-shadow: 0px 0px 8px rgba(20, 20, 20, 0.623);
     font-size: large;
     position: fixed;
     display: none;
@@ -137,11 +116,50 @@ a{
     z-index: 2;
     overflow: hidden;
 }
+#SideBar a{
+    text-decoration: none;
+}
+#SideBar a:focus,#SideBar a:hover{
+    color: white;
+    padding: 6px 8px;
+    cursor:pointer;
+    border-radius: 5px;
+    font-style: oblique;
+    font-weight: bold;
+    background-color: blue;
+}
+#responseData{
+    height: 140px;
+    position: relative;
+    margin-bottom: 2%;
+    z-index: 4;
+    padding: 3px;
+    overflow-y: scroll;
+}
+details{
+    color: darkblue;
+}
+summary{
+    color:blue;
+}
+.OK{
+    background-color: blue;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 7px;
+    padding:4px 10px;
+    margin:2px 40%;
+}
+.responsingBox{
+    padding-top:3%;
+}
 #Clock{
     position: absolute;
     bottom: 2%;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:large;
+    color: darkblue;
 }
 #searchBooks{
     height: 30%;
@@ -158,12 +176,12 @@ a{
     z-index: 5;
     transform: translate(-50%,-50%);
     height: max-content;
-    width: 50%;  
+    width: 35%;  
     padding: 2%;
     background-color:whitesmoke;
     border: 2px solid silver;
     border-radius: 25px;
-    box-shadow: 2px 2px rgba(24, 22, 22, 0.3);
+    box-shadow: 0px 0px 8px rgba(2, 2, 2, 0.3);
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: medium;
 }
@@ -171,33 +189,36 @@ a{
     background-color: white;
     height: max-content;
     padding: 5px;
-    color: brown;
-    border: 0.5px solid black;
+    color: blue;
+    border: 0.5px solid blue;
     border-radius: 5px;
 }
 #deleteAllData>h2{
+    color: blue;
     margin-right: 5%;
-    text-shadow: 1px 1px rgba(29, 27, 27, 0.411);
+    text-shadow: 0px 0px 1px rgba(2, 2, 2, 0.411);
 }
 [value="Delete"]{
+    border: none;
     margin-left: 30%;
     color: white;
-    padding: 8px 18px;
-    background-color: black;
-    border-radius: 10px;
+    padding: 8px 12px;
+    background-color: blue;
+    border-radius: 6px;
 }
-::placeholder,#detail,#deleteAllData>h2{
+::placeholder,#detail{
     color: darkslateblue;
 }
 #Note{
     color: red;
     font-style: italic;
 }
+
 [onClick="closeDeleteAllDataPopup()"]{
     position: absolute;
     right: 3%;
     top: 3%;
-    border: 0px solid red;
+    border: none;
     background-color: red;
     border-radius: 50%;
     color: white;
@@ -210,8 +231,8 @@ a{
     right: 6%;
     top: 6%;
     z-index: 3;
+    background-color:darkblue;
+    color: white;
     padding: 5px;
     border-radius: 5px;
-    background-color: antiquewhite;
-    color: red;
 }
