--- a/CSS/Rules.css
+++ b/CSS/Rules.css
@@ -3,32 +3,31 @@
     padding: 0px;
 }
 
-body{
-    background-color: darkcyan;
-}
 h1{
     text-align: center;
-    color: white;
-    text-shadow: 3px 3px rgb(0, 0, 0 ,0.2);
+    color:red;
+    margin: 11px auto;
+    text-shadow: 0px 0px 1px rgba(12, 0, 0, 0.596);
 }
 #rules{
-    color: white;
     word-spacing: 0.09cm;
-    line-height: 25px;
+    line-height: 26px;
     width: 95%;
-    font-family: georgia;
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;;
 }
 ol{
     margin-left: 30px;
+    list-style-type:circle;
 }
 #goBack{
-    background-color: black;
+    background-color: blue;
     padding: 10px;
-    height:max-content;
     width: max-content;
-    margin:2% 46%;
     border-radius: 5px;
     color: white;
-    box-shadow: 4px 4px rgb(0, 0, 0 ,0.2);
+    margin: 2% 48.3%;
+    border: none;
+    box-shadow: 0px 0px 10px rgba(34, 31, 31, 0.582);
 
 }
