--- a/CSS/Popup.css
+++ b/CSS/Popup.css
@@ -5,8 +5,7 @@
     left: 50%;
     z-index: 8;
     height: max-content;
-    width: 38%;
-    padding:20px;
+    padding:3%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     transform: translate(-50%,-50%);
@@ -35,4 +34,19 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+@media(max-width:491px){
+#Popup{
+    width: 55%;
+}
+}
+@media(min-width:492px)and(max-width:1023px){
+    #Popup{
+        width: 30%;
+    }
+}
+@media(min-width:1024px){
+    #Popup{
+        width: 28%;
+    }
 }
