--- a/CSS/All Books.css
+++ b/CSS/All Books.css
@@ -5,6 +5,9 @@
 body{
     text-align: center;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 h1{
     text-align: center;
