--- a/CSS/Admin Site.css
+++ b/CSS/Admin Site.css
@@ -81,7 +81,7 @@ i{
 .boxes,.box{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:space-evenly;
     text-align: center;
 }
 .box{
@@ -102,8 +102,8 @@ a{
 }
 
 #SideBar{
-    background-color:rgb(241, 237, 237);
-    box-shadow: 0px 0px 8px rgba(20, 20, 20, 0.623);
+    background-color: whitesmoke;
+    box-shadow: 0px 0px 4px 2px rgba(20, 20, 20, 0.623);
     font-size: large;
     position: fixed;
     display: none;
@@ -129,7 +129,6 @@ a{
     background-color: blue;
 }
 #responseData{
-    height: 140px;
     position: relative;
     margin-bottom: 2%;
     z-index: 4;
@@ -236,3 +235,61 @@ summary{
     padding: 5px;
     border-radius: 5px;
 }
+@media(max-width:491px){
+      #libraryName,#deleteAllData>h2{
+         font-size: large;
+      }
+      #noDataFound{
+          top: 8%;
+      }
+      #responseData{
+        height: 180px;
+      }
+      #welcome{
+          display:none;
+      }
+      .box{
+          height: 28vw;
+          width: 28vw;
+          margin:5vw auto;
+      }
+    }
+    @media(min-width:492px)and(max-width:1023px){
+        #libraryName,#deleteAllData>h2{
+          font-size: larger;
+        }
+        #noDataFound{
+            top: 7%;
+        }
+        #responseData{
+            height: 160px;
+        }
+        #welcome{
+            display: none;
+        }
+        .box{
+            height: 24vw;
+            width: 24vw;
+            margin:4vw auto;
+        }
+    }
+    @media(min-width:1024px){
+        #libraryName,#deleteAllData>h2{
+            font-size: larger;
+        }
+        #noDataFound{
+            top: 6%;
+        }
+        #responseData{
+            height: 150px;
+        }
+        #welcome{
+            display: block;
+        }
+        .box{
+            height: 20vw;
+            width: 20vw;
+            margin:3vw auto;
+        }
+        
+    }
