--- a/CSS/Rules.css
+++ b/CSS/Rules.css
@@ -6,13 +6,13 @@
 h1{
     text-align: center;
     color:red;
-    margin: 11px auto;
+    margin: 2% auto;
     text-shadow: 0px 0px 1px rgba(12, 0, 0, 0.596);
 }
 #rules{
     word-spacing: 0.09cm;
     line-height: 26px;
-    width: 95%;
+    width: 99%;
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;;
 }
