--- a/CSS/Sign-Up.css
+++ b/CSS/Sign-Up.css
@@ -20,8 +20,8 @@ body{
     text-align: center;
 }
 .formBody{
-    padding:4% 3% ;
-    border-radius: 8%;
+    padding:4%;
+    border-radius: 10%;
     background-color: whitesmoke;
     box-shadow: 0px 0px 6px rgba(7, 7, 7, 0.534);
     flex-direction: column;
