--- a/CSS/Admin Site.css
+++ b/CSS/Admin Site.css
@@ -34,9 +34,8 @@
     top: 1%;;
     margin: 0.5% 4px;
 }
-#welcome{ 
-    font-weight: 1000;
-    margin-top: 3%;
+#welcome{
+    margin: 14px; 
     color:darkblue;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -51,6 +50,7 @@
     padding: 2px 4px;
     border-radius: 4px;
     border: 1px solid blue;
+    background-color: white;
 }
 [type="search"],[type="search"]:active{
     border: 1px solid blue;
@@ -71,13 +71,13 @@ i{
     font-size:large;
     background-color: white;
 }
+
 #libraryName{
     color:blue;
-    margin-top: 7px;
+    margin-top: 10px;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.562);
     text-align: center;
 }
-
 .boxes,.box{
     display: flex;
     align-items: center;
@@ -90,7 +90,7 @@ i{
     margin:3vw 15vw;
     background-color:whitesmoke;
     border-radius: 15%;
-    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.582);
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.582);
 }
 a{
     text-decoration: none;
@@ -169,14 +169,14 @@ summary{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center;
     position: fixed;
     top: 50%;
     left: 50%;
     z-index: 5;
     transform: translate(-50%,-50%);
-    height: max-content;
-    width: 35%;  
-    padding: 2%;
+    height: max-content;  
+    padding: 4%;
     background-color:whitesmoke;
     border: 2px solid silver;
     border-radius: 25px;
@@ -199,7 +199,6 @@ summary{
 }
 [value="Delete"]{
     border: none;
-    margin-left: 30%;
     color: white;
     padding: 8px 12px;
     background-color: blue;
@@ -207,6 +206,9 @@ summary{
 }
 ::placeholder,#detail{
     color: darkslateblue;
+}
+#Note,#detail{
+    text-align: justify;
 }
 #Note{
     color: red;
@@ -222,25 +224,28 @@ summary{
     border-radius: 50%;
     color: white;
     font-size: larger;
-    padding: 5px 6px;
+    padding: 5px 10px;
 }
 #noDataFound{
     display:none;
     position: absolute;
-    right: 6%;
-    top: 6%;
+    right: 6%;  
     z-index: 3;
-    background-color:darkblue;
+    border: 1px solid black;
+    background-color:blue;
     color: white;
     padding: 5px;
     border-radius: 5px;
 }
+
+
+
 @media(max-width:491px){
       #libraryName,#deleteAllData>h2{
-         font-size: large;
+         font-size: 24px;
       }
       #noDataFound{
-          top: 8%;
+          top: 7.5%;
       }
       #responseData{
         height: 180px;
@@ -249,17 +254,25 @@ summary{
           display:none;
       }
       .box{
-          height: 28vw;
-          width: 28vw;
-          margin:5vw auto;
+          height: 32vw;
+          width: 32vw;
+          margin:7vw auto;
+      }
+      #deleteAllData{
+          width:80vw;
+          padding:5px;
+      }
+      input{
+        width: 180px;
+        border-radius: 5px;
       }
     }
     @media(min-width:492px)and(max-width:1023px){
         #libraryName,#deleteAllData>h2{
-          font-size: larger;
+          font-size: 28px;
         }
         #noDataFound{
-            top: 7%;
+            top: 6.5%;
         }
         #responseData{
             height: 160px;
@@ -268,28 +281,52 @@ summary{
             display: none;
         }
         .box{
-            height: 24vw;
-            width: 24vw;
+            height: 22vw;
+            width: 22vw;
             margin:4vw auto;
+        }
+        #deleteAllData{
+            width:23vw;
+            padding: 7px;
+        }
+        input{
+            width: 210px;
+            border-radius: 6px;
         }
     }
     @media(min-width:1024px){
-        #libraryName,#deleteAllData>h2{
-            font-size: larger;
+        #libraryName{
+            font-size: 40px;
+        }
+        #deleteAllData>h2{
+            font-size: 25px;
         }
         #noDataFound{
-            top: 6%;
+            top: 5.5%;
         }
         #responseData{
-            height: 150px;
+            height: 170px;
+        }
+        i{
+            font-size: larger;
         }
         #welcome{
             display: block;
+            color: darkblue;
         }
         .box{
-            height: 20vw;
-            width: 20vw;
+            height: 17vw;
+            width: 17vw;
             margin:3vw auto;
+        }
+        #deleteAllData{
+            width:20vw;
+            padding: 10px;
+        }
+        input{
+            width: 240px;
+            border-radius: 8px;
+            border:2px solid blue;
         }
         
     }
