--- a/CSS/Popup.css
+++ b/CSS/Popup.css
@@ -26,8 +26,8 @@
     color: white;
     border: none;
     text-align: center;
-    margin: 6px 2px;
-    box-shadow:0px 0px 5px rgba(0, 0, 0, 0.5) ;
+    margin: 8px 2px;
+    box-shadow:0px 0px 2px 1px rgba(0, 0, 0, 0.5) ;
 }
 
 #buttons{
