--- a/CSS/Sign-Up.css
+++ b/CSS/Sign-Up.css
@@ -20,7 +20,7 @@ body{
     text-align: center;
 }
 .formBody{
-    padding:4%;
+    padding:4.5%;
     border-radius: 10%;
     background-color: whitesmoke;
     box-shadow: 0px 0px 6px rgba(7, 7, 7, 0.534);
@@ -33,6 +33,7 @@ body{
     box-shadow: 0px 0px 6px rgba(2, 2, 2, 0.507);
     border: none;
     background-color: blue;
+    height: max-content;
 }
 a{
     font-size: larger;
@@ -58,3 +59,35 @@ input{
 #checkingRole>label{
     margin-left: 10px;
 }
+
+@media(max-width:491px){
+    input{
+      width: 180px;
+      height: 10px;
+      border-radius: 5px;
+    }
+    [type="submit"]{
+        width: 60px;
+    }
+  }
+  @media(min-width:492px)and(max-width:1023px){
+      input{
+          width: 210px;
+          height: 15px;
+          border-radius: 7px;
+      }
+      [type="submit"]{
+          width: 70px;
+      }
+  }
+  @media(min-width:1024px){
+      input{
+          width: 230px;
+          height: 18px;
+          border-radius: 10px;
+      }
+      [type="submit"]{
+          width: 80px;
+      }
+      
+  }
